2010-01-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (with-vc-properties): Deal with directory arguments.  (Bug#5298)

	* vc-dir.el (vc-dir-resynch-file): Update the vc-dir header when
	resyncing a directory.

2010-01-17  Stephen Leake  <stephen_leake@member.fsf.org>

	* progmodes/ada-mode.el: Fix bug#1920, bug#5400.
	(ada-ident-re): Delete ., allow multibyte characters.
	(ada-goto-label-re): New; matches goto labels.
	(ada-block-label-re): New; matches block labels.
	(ada-label-re): New; matches both.
	(ada-named-block-re): Deleted; callers changed to use
	`ada-block-label-re' instead.
	(ada-get-current-indent, ada-get-indent-noindent, ada-get-indent-loop):
	Use `ada-block-label-re'.
	(ada-indent-on-previous-lines): Improve handling of goto labels.
	(ada-get-indent-block-start): Special-case block label.
	(ada-get-indent-label): Split into `ada-indent-block-label' and
	`ada-indent-goto-label'.
	(ada-goto-stmt-start, ada-goto-next-non-ws):
	Optionally ignore goto labels.
	(ada-goto-next-word): Simplify.
	(ada-indent-newline-indent-conditional): Insert newline before
	trying to fix indentation; doc fix.

2010-01-17  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-command-flags): Give it an initial value.

2010-01-17  Glenn Morris  <rgm@gnu.org>

	* cedet/semantic/idle.el (semantic-idle-work-for-one-buffer): Doc fix.

2010-01-17  Juanma Barranquero  <lekktu@gmail.com>

	* cedet/semantic.el (semantic-mode):
	* files.el (minibuffer-with-setup-hook):
	* textmodes/artist.el (artist-mt, artist-key-undraw-continously)
	(artist-key-draw-continously, artist-key-do-continously-continously)
	(artist-key-set-point-continously, artist-mouse-draw-continously):
	Fix typos in docstrings.

2010-01-16  Lennart Borgman  <lennart.borgman@gmail.com>

	* nxml/nxml-mode.el (nxml-extend-after-change-region): Never
	return t (Bug#3898).

2010-01-16  Frédéric Perrin  <frederic.perrin@resel.fr>  (tiny change)
