@@ -1,3 +1,8 @@
+2010-01-17  Chong Yidong  <cyd@stupidchicken.com>
+
+	* mail/sendmail.el (mail-yank-original): Set the mark if the
+	specified function for yanking does not do it.
+
 2010-01-17  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* vc.el (with-vc-properties): Deal with directory arguments.  (Bug#5298)
